<resources>
    <string name="app_name">BeOkay</string>
    <string name="schedule">Schedule</string>
    <string name="training">Training</string>
    <string name="diary">Diary</string>
    <string name="settings">Settings</string>

    <string name="msg_exit_caution">Tap BACK again to exit</string>
    <string name="register_tab">Register</string>
    <string name="login_tab">Login</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">register</string>
    <string name="msg_incorrect_auth_data">Inappropriate login or password</string>
    <string name="msg_network_error">Network connection error occurred</string>
    <string name="msg_connection_timed_out">Connection timed out. Try again later</string>
    <string name="hint_name">Name…</string>
    <string name="hint_email">Email…</string>
    <string name="hint_password">*******</string>
    <string name="msg_email_already_registered">This email alreday registered</string>
    <string name="msg_choose_other_account">Error occurred. Please try to log in using other email.</string>
    <string name="btn_forgot_password"><u>Forgot password?</u></string>
    <string name="string_enter_email_for_recovery">Enter your email, and we\'ll send you a link so you can reset your password</string>
    <string name="btn_send_email">Send an email</string>
    <string name="msg_login_void">Login not entered</string>
    <string name="msg_password_void">Password not entered</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="settings_logout">Log out</string>
    <string name="settings_saved_email_key">Saved_email</string>

    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lorem_ipsum_other">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \"Content here, content here\", making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="open_diary_items_drafts">Need ideas?</string>
    <string name="tell_why_you_good_today">What makes you feel proud today?</string>
    <string name="btn_save">save</string>
    <string name="msg_unknown_error">Unknown error</string>
    <string name="msg_confirm_email">Confirm your registration by clicking link in email we sent you, then you\'ll be able to login</string>
    <string name="btn_remove_edittext">Remove EditText</string>
    <string name="btn_add_edittext">Add EditText</string>
    <string name="btn_exit_without_save">Exit without save</string>
    <string name="msg_diary_entry_not_saved">Diary entry isn\'t saved</string>
    <string name="error_min_three">Fill at least 3 fields!</string>
    <string name="select_diary_draft">Maybe this will give you ideas.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="version">Version</string>
    <string name="settings_version_key" translatable="false">Version</string>
    <string name="error_loading_articles">Error loading articles</string>
</resources>
