<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.gmail.f.d.ganeeva.beokay.authorization.password_recovery.RecoverPasswordViewModel"/>
    </data>

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        tools:context="com.gmail.f.d.ganeeva.beokay.authorization.login.LoginFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/password"
            android:text="@string/string_enter_email_for_recovery"
            android:textColor="@color/colorSecondaryText"
            android:gravity="left"
            android:textSize="15dp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@+id/error"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_password"
            android:textSize="20sp"
            android:text="@={viewModel.email}"/>

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginButtonHolder"
            android:layout_marginBottom="10dp"
            android:text="@{viewModel.error}"
            android:textColor="@android:color/holo_red_dark"
            android:visibility='@{viewModel.error == "" ? View.GONE : View.VISIBLE}'/>

        <FrameLayout
            android:id="@+id/loginButtonHolder"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:text="@string/btn_send_email"
                android:textColor="@color/colorTextWhite"
                android:textSize="20sp"
                android:onClick="@{() -> viewModel.sendEmail()}"
                android:visibility="@{viewModel.isProgress ? View.GONE : View.VISIBLE}"/>
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{viewModel.isProgress ? View.VISIBLE : View.GONE}"/>
        </FrameLayout>
    </RelativeLayout>
</layout>


